--- a/CRM/Views/Student/List.cshtml
+++ b/CRM/Views/Student/List.cshtml
@@ -113,11 +113,35 @@
 </div>
 
 
-<div class="modal fade" id="modal-default">
+<div class="modal fade" id="modal-Promod">
+    <div class="modal-dialog" style="width:550px">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title"><i class='fas fa-university'></i> Promod Student</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label>Class Name</label>
+                    <input type="text" id="className" class="form-control" />
+                </div>
+            </div>
+            <div class="modal-footer justify-content-between">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary"><i class="fas fa-save"></i> Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="modal-View">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Promod Student</h4>
+                <h4 class="modal-title">Student</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -214,8 +238,9 @@
                     "<button type='button' class='btn btn-info btn-flat dropdown-toggle dropdown-icon' data-toggle='dropdown'>" +
                     "<span class='sr-only'>Toggle Dropdown</span></button>" +
                     "<div class='dropdown-menu' role='menu'>" +
-                    "<a class='dropdown-item' data-toggle='modal' data-target='#modal-default'>Promod</a>" +
-                    "<a class='dropdown-item' href='#'>View</a>" +
+                    "<a class='dropdown-item' data-toggle='modal' data-target='#modal-Promod'><i class='fas fa-university'></i> Promod</a>" +
+                    "<a class='dropdown-item' data-toggle='modal' data-target='#modal-View'><i class='fas fa-eye'></i>> View</a>" +
+                    "<a class='btn btn-default' href='../Student/index?id=" + element.id + "' ><i class='fas fa-eye'></i>> Update Detail</a>" +
                     "</div></div></td>" +
                     "<td><input id='' type='checkbox'></td></tr>");
 
